--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Event Prevent Default Demo</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
+</head>
+
+<body>
+  <div class="wrapper">
+    <div class="container">
+      <div class= "card-contents"></div>
+        <h1>Quiz Games</h1>
+        <form>
+          <input placeholder="name" id="name" />
+          <input placeholder="email" id="email" />
+          <button id="submit">Submit</button>
+          <div>
+            <h3 id="response"></h3>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <script src="./assets/js/script.js"></script>
+</body>
+</html>
 
